-added geospatial data

--- a/Segmentation and clustering.ipynb
+++ b/Segmentation and clustering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,70 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PostalCode</th>\n",
-       "      <th>Borough</th>\n",
-       "      <th>Neighborhood</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M3A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Parkwoods</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>M4A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Victoria Village</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>M5A</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Regent Park, Harbourfront</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M6A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M7A</td>\n",
-       "      <td>Queen's Park</td>\n",
-       "      <td>Ontario Provincial Government</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "  PostalCode           Borough                      Neighborhood\n",
        "0        M3A        North York                         Parkwoods\n",
@@ -132,11 +74,11 @@
        "2        M5A  Downtown Toronto         Regent Park, Harbourfront\n",
        "3        M6A        North York  Lawrence Manor, Lawrence Heights\n",
        "4        M7A      Queen's Park     Ontario Provincial Government"
-      ]
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>M3A</td>\n      <td>North York</td>\n      <td>Parkwoods</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>M4A</td>\n      <td>North York</td>\n      <td>Victoria Village</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M5A</td>\n      <td>Downtown Toronto</td>\n      <td>Regent Park, Harbourfront</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>M6A</td>\n      <td>North York</td>\n      <td>Lawrence Manor, Lawrence Heights</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>M7A</td>\n      <td>Queen's Park</td>\n      <td>Ontario Provincial Government</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 15
     }
    ],
    "source": [
@@ -151,18 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(103, 3)"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 16
     }
    ],
    "source": [
@@ -171,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,73 +123,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "M3A\nM4A\nM5A\nM6A\nM7A\nM9A\nM1B\nM3B\nM4B\nM5B\nM6B\nM9B\nM1C\nM3C\nM4C\nM5C\nM6C\nM9C\nM1E\nM4E\nM5E\nM6E\nM1G\nM4G\nM5G\nM6G\nM1H\nM2H\nM3H\nM4H\nM5H\nM6H\nM1J\nM2J\nM3J\nM4J\nM5J\nM6J\nM1K\nM2K\nM3K\nM4K\nM5K\nM6K\nM1L\nM2L\nM3L\nM4L\nM5L\nM6L\nM9L\nM1M\nM2M\nM3M\nM4M\nM5M\nM6M\nM9M\nM1N\nM2N\nM3N\nM4N\nM5N\nM6N\nM9N\nM1P\nM2P\nM4P\nM5P\nM6P\nM9P\nM1R\nM2R\nM4R\nM5R\nM6R\nM7R\nM9R\nM1S\nM4S\nM5S\nM6S\nM1T\nM4T\nM5T\nM1V\nM4V\nM5V\nM8V\nM9V\nM1W\nM4W\nM5W\nM8W\nM9W\nM1X\nM4X\nM5X\nM8X\nM4Y\nM7Y\nM8Y\nM8Z\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Latitude, Longitude]\n",
-       "Index: []"
+       "43.75245    103\n",
+       "Name: Latitude, dtype: int64"
       ]
      },
-     "execution_count": 45,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 26
     }
    ],
    "source": [
     "lat_lng = pd.DataFrame(columns = ['Latitude','Longitude'])\n",
-    "lat_lng"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "43.75245    309\n",
-       "Name: Latitude, dtype: int64"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# initialize your variable to None\n",
     "lat_lng_coords = None\n",
     "postal_code = df['PostalCode']\n",
@@ -257,7 +156,7 @@
     "    while(lat_lng_coords is None):\n",
     "      g = geocoder.arcgis('{}, Toronto, Ontario'.format(pin))\n",
     "      lat_lng_coords = g.latlng\n",
-    "\n",
+    "    # print(pin)\n",
     "    latitude = lat_lng_coords[0]\n",
     "    longitude = lat_lng_coords[1]\n",
     "    lat_lng = lat_lng.append({'Latitude':latitude,'Longitude':longitude}, ignore_index = True)\n",
@@ -267,19 +166,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "43.648690000000045 -79.38543999999996\n"
+      "a\n"
      ]
     }
    ],
    "source": [
-    "print(latitude, longitude)"
+    "print('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "     Latitude  Longitude\n0    43.75245  -79.32991\n1    43.75245  -79.32991\n2    43.75245  -79.32991\n3    43.75245  -79.32991\n4    43.75245  -79.32991\n..        ...        ...\n98   43.75245  -79.32991\n99   43.75245  -79.32991\n100  43.75245  -79.32991\n101  43.75245  -79.32991\n102  43.75245  -79.32991\n\n[103 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lat_lng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   A\n",
+       "0  0\n",
+       "1  1\n",
+       "2  2\n",
+       "3  3\n",
+       "4  4"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "pd.concat([pd.DataFrame([i], columns=['A']) for i in range(5)],\n",
+    "\n",
+    "          ignore_index=True)"
    ]
   },
   {
@@ -287,18 +231,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pd.concat([pd.DataFrame([i], columns=['A']) for i in range(5)],\n",
-    "\n",
-    "          ignore_index=True)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python394jvsc74a57bd03999384e67c98de496913c02dba4be0a2eee23296958bdcc96d6c0dc2767112b",
+   "display_name": "Python 3.9.4 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -310,7 +249,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "3999384e67c98de496913c02dba4be0a2eee23296958bdcc96d6c0dc2767112b"
+   }
   }
  },
  "nbformat": 4,
