--- a/Segmentation and clustering.ipynb
+++ b/Segmentation and clustering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>M3A</td>\n      <td>North York</td>\n      <td>Parkwoods</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>M4A</td>\n      <td>North York</td>\n      <td>Victoria Village</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M5A</td>\n      <td>Downtown Toronto</td>\n      <td>Regent Park, Harbourfront</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>M6A</td>\n      <td>North York</td>\n      <td>Lawrence Manor, Lawrence Heights</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>M7A</td>\n      <td>Queen's Park</td>\n      <td>Ontario Provincial Government</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 53
     }
    ],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 54
     }
    ],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,115 +123,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "M3A\nM4A\nM5A\nM6A\nM7A\nM9A\nM1B\nM3B\nM4B\nM5B\nM6B\nM9B\nM1C\nM3C\nM4C\nM5C\nM6C\nM9C\nM1E\nM4E\nM5E\nM6E\nM1G\nM4G\nM5G\nM6G\nM1H\nM2H\nM3H\nM4H\nM5H\nM6H\nM1J\nM2J\nM3J\nM4J\nM5J\nM6J\nM1K\nM2K\nM3K\nM4K\nM5K\nM6K\nM1L\nM2L\nM3L\nM4L\nM5L\nM6L\nM9L\nM1M\nM2M\nM3M\nM4M\nM5M\nM6M\nM9M\nM1N\nM2N\nM3N\nM4N\nM5N\nM6N\nM9N\nM1P\nM2P\nM4P\nM5P\nM6P\nM9P\nM1R\nM2R\nM4R\nM5R\nM6R\nM7R\nM9R\nM1S\nM4S\nM5S\nM6S\nM1T\nM4T\nM5T\nM1V\nM4V\nM5V\nM8V\nM9V\nM1W\nM4W\nM5W\nM8W\nM9W\nM1X\nM4X\nM5X\nM8X\nM4Y\nM7Y\nM8Y\nM8Z\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "43.75245    103\n",
-       "Name: Latitude, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 26
-    }
-   ],
-   "source": [
-    "lat_lng = pd.DataFrame(columns = ['Latitude','Longitude'])\n",
-    "# initialize your variable to None\n",
-    "lat_lng_coords = None\n",
-    "postal_code = df['PostalCode']\n",
-    "postal_code\n",
-    "for  x, pin in postal_code.items():\n",
-    "# loop until you get the coordinates\n",
-    "    while(lat_lng_coords is None):\n",
-    "      g = geocoder.arcgis('{}, Toronto, Ontario'.format(pin))\n",
-    "      lat_lng_coords = g.latlng\n",
-    "    # print(pin)\n",
-    "    latitude = lat_lng_coords[0]\n",
-    "    longitude = lat_lng_coords[1]\n",
-    "    lat_lng = lat_lng.append({'Latitude':latitude,'Longitude':longitude}, ignore_index = True)\n",
-    "    \n",
-    "lat_lng['Latitude'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "a\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "     Latitude  Longitude\n0    43.75245  -79.32991\n1    43.75245  -79.32991\n2    43.75245  -79.32991\n3    43.75245  -79.32991\n4    43.75245  -79.32991\n..        ...        ...\n98   43.75245  -79.32991\n99   43.75245  -79.32991\n100  43.75245  -79.32991\n101  43.75245  -79.32991\n102  43.75245  -79.32991\n\n[103 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(lat_lng)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   A\n",
-       "0  0\n",
-       "1  1\n",
-       "2  2\n",
-       "3  3\n",
-       "4  4"
+       "  PostalCode   Latitude  Longitude\n",
+       "0        M1B  43.806686 -79.194353\n",
+       "1        M1C  43.784535 -79.160497\n",
+       "2        M1E  43.763573 -79.188711\n",
+       "3        M1G  43.770992 -79.216917\n",
+       "4        M1H  43.773136 -79.239476"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>M1B</td>\n      <td>43.806686</td>\n      <td>-79.194353</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>M1C</td>\n      <td>43.784535</td>\n      <td>-79.160497</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M1E</td>\n      <td>43.763573</td>\n      <td>-79.188711</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>M1G</td>\n      <td>43.770992</td>\n      <td>-79.216917</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>M1H</td>\n      <td>43.773136</td>\n      <td>-79.239476</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 56
     }
    ],
    "source": [
-    "pd.concat([pd.DataFrame([i], columns=['A']) for i in range(5)],\n",
+    "lat_lng = pd.read_csv('Geospatial_Coordinates.csv')\n",
+    "lat_lng.rename(columns ={'Postal Code':'PostalCode'}, inplace = True)\n",
+    "lat_lng.head()\n",
     "\n",
-    "          ignore_index=True)"
+    "# initialize your variable to None\n",
+    "# lat_lng_coords = None\n",
+    "# postal_code = df['PostalCode']\n",
+    "# postal_code\n",
+    "# for  x, pin in postal_code.items():\n",
+    "# # loop until you get the coordinates\n",
+    "#     while(lat_lng_coords is None):\n",
+    "#       g = geocoder.arcgis('{}, Toronto, Ontario'.format(pin))\n",
+    "#       lat_lng_coords = g.latlng\n",
+    "#     # print(pin)\n",
+    "#     latitude = lat_lng_coords[0]\n",
+    "#     longitude = lat_lng_coords[1]\n",
+    "#     lat_lng = lat_lng.append({'Latitude':latitude,'Longitude':longitude}, ignore_index = True)\n",
+    "    \n",
+    "# lat_lng['Latitude'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  PostalCode           Borough                      Neighborhood   Latitude  \\\n",
+       "0        M3A        North York                         Parkwoods  43.753259   \n",
+       "1        M4A        North York                  Victoria Village  43.725882   \n",
+       "2        M5A  Downtown Toronto         Regent Park, Harbourfront  43.654260   \n",
+       "3        M6A        North York  Lawrence Manor, Lawrence Heights  43.718518   \n",
+       "4        M7A      Queen's Park     Ontario Provincial Government  43.662301   \n",
+       "\n",
+       "   Longitude  \n",
+       "0 -79.329656  \n",
+       "1 -79.315572  \n",
+       "2 -79.360636  \n",
+       "3 -79.464763  \n",
+       "4 -79.389494  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>M3A</td>\n      <td>North York</td>\n      <td>Parkwoods</td>\n      <td>43.753259</td>\n      <td>-79.329656</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>M4A</td>\n      <td>North York</td>\n      <td>Victoria Village</td>\n      <td>43.725882</td>\n      <td>-79.315572</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M5A</td>\n      <td>Downtown Toronto</td>\n      <td>Regent Park, Harbourfront</td>\n      <td>43.654260</td>\n      <td>-79.360636</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>M6A</td>\n      <td>North York</td>\n      <td>Lawrence Manor, Lawrence Heights</td>\n      <td>43.718518</td>\n      <td>-79.464763</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>M7A</td>\n      <td>Queen's Park</td>\n      <td>Ontario Provincial Government</td>\n      <td>43.662301</td>\n      <td>-79.389494</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 57
+    }
+   ],
+   "source": [
+    "\n",
+    "df = df.merge(lat_lng, on = ['PostalCode'],how = 'left')\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
