--- a/coursera_capstone.ipynb
+++ b/coursera_capstone.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "### Kochi is often referred as the commercial and financial capital of Kerala. Availability of electricity, fresh water, long coastline, backwaters, good banking facilities, presence of a major port, container trans-shipment terminal, harbour terminal and an international air terminal are some of the factors which accelerated the industrial growth in the city and its adjoining district. In recent years the city has witnessed heavy investment, thus making it one of the fastest-growing second-tier metro cities in India. The district contributes 15.1% of the state GDP. Construction and manufacturing industries combined contributes 37% of the district's total GDP, and trade, tourism and hospitality industries together provides another 20%. Major business sectors include construction, manufacturing, shipbuilding, transportation/shipping, seafood and spices exports, chemical industries, information technology (IT), tourism, health services, and banking.\n",
     "\n",
-    "### This project is a comparitive study of food choices of Kochi and Calicut to understand how much the econmical and cultural differences can affect the food preferences of people.\n"
+    "### This project is a comparitive study of food choices of Kochi and Calicut to understand how much the econmical and cultural differences can affect the food preferences of people. This project is useful for restaurant chains who want to start their outlets in diffrent locations to customize their offerings based on the intereset of people of the respective locations.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
